django-3tier-eks/08_Django_deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
  namespace: was-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: was
        image: wjsthdus36/cicd:django_latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:         # once here
          requests:
            cpu: 250m
          limits:
            cpu: 500m
