django-3tier-eks/13_Nginx_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: wjsthdus36/m-dev:nginx_v1
        ports:
        - containerPort: 80
        resources:         # once here
          requests:
            cpu: 250m
          limits:
            cpu: 500m    

        volumeMounts:
        - mountPath: "/etc/nginx/"
          name: nginx-conf
          readOnly: true
#        - mountPath: /var/log/nginx
#          name: log

      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      
#      - name: log
#        persistentVolumeClaim:
#            claimName: nginx-pvc
