django-3tier-eks/04_Mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: db-ns
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: mysql
