django-3tier-eks/07_redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: was-ns
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
