django-3tier-eks/09_Django_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
  namespace: was-ns
spec:
  selector:
    app: was
  ports:
    - port: 8000
      targetPort: 8000
