django-3tier-eks/14_Nginx_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
  - nodePort: 30200
    port: 80
    targetPort: 80
  type: NodePort
