django-3tier-eks/15_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb3
  labels:
    name: alb3
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:940168446867:certificate/16f02e33-0a93-42ac-a001-a2e77e5ed90f, arn:aws:acm:eu-north-1:940168446867:certificate/05c4726e-7253-4f44-a50e-0183cbfa55ae
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  - host: django.thdus.net
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
